[gd_scene load_steps=7 format=4 uid="uid://c8ly03tr6cwi5"]

[ext_resource type="PackedScene" uid="uid://b46qouyu3lx2m" path="res://scenes/windows/window_base.tscn" id="1"]
[ext_resource type="Script" uid="uid://bufiugoelneob" path="res://scenes/windows/window_network_seller.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://8sorr10f66nw" path="res://textures/icons/money.png" id="3"]
[ext_resource type="PackedScene" uid="uid://co5icrrrwscgg" path="res://scenes/input_container.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://b4efojcll7i7" path="res://scenes/output_container.tscn" id="5"]
[ext_resource type="AudioStream" uid="uid://cnedscgai8lbp" path="res://audio/sfx/task_completed2.wav" id="6"]

[node name="WindowBase" instance=ExtResource("1")]
offset_bottom = 346.0
script = ExtResource("2")
window = "bandwidth_seller"

[node name="Icon" parent="TitlePanel/TitleContainer" index="0"]
texture = ExtResource("3")

[node name="Title" parent="TitlePanel/TitleContainer" index="1"]
text = "Bandwidth Seller"

[node name="MainContainer" type="VBoxContainer" parent="PanelContainer" index="0"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="Download" parent="PanelContainer/MainContainer" index="0" instance=ExtResource("4")]
layout_mode = 2
default_resource = "download_speed"
limit = -1.0

[node name="Upload" parent="PanelContainer/MainContainer" index="1" instance=ExtResource("4")]
layout_mode = 2
default_resource = "upload_speed"
limit = -1.0

[node name="Progress" type="VBoxContainer" parent="PanelContainer/MainContainer" index="2"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressContainer" type="HBoxContainer" parent="PanelContainer/MainContainer/Progress" index="0"]
layout_mode = 2
mouse_filter = 2

[node name="ProgressLabel" type="Label" parent="PanelContainer/MainContainer/Progress/ProgressContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "0b"

[node name="SizeLabel" type="Label" parent="PanelContainer/MainContainer/Progress/ProgressContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "4b"
horizontal_alignment = 2

[node name="ProgressBar" type="ProgressBar" parent="PanelContainer/MainContainer/Progress" index="1"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"ProgressBarGreen"
max_value = 1.0
step = 0.001
value = 0.42
show_percentage = false

[node name="Money" parent="PanelContainer/MainContainer" index="3" instance=ExtResource("5")]
layout_mode = 2
default_resource = "money"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="3"]
stream = ExtResource("6")
max_distance = 1200.0
max_polyphony = 5
bus = &"Window SFX"
